--- a/_posts/2021-11-17-birdways.md
+++ b/_posts/2021-11-17-birdways.md
@@ -57,7 +57,7 @@ Sticking with the waterbirds for now, let's look at the myriad ways birds catch 
 
 {% include image-caption.html imageurl="/assets/images/posts/gannet.jpg" title="gannet" caption="While gannets don't die from hitting the water, they do occasionally die from colliding with one another at high speed." %}
 
-**Pursuing.** If a bird wants to go deeper or stay submerged longer, they face some evolutionary trade-offs. Penguins, auks, and cormorants have dense bones compared to other birds, and dense, overlapping feathers to keep out the water. Cormorants actually fail at this on deeper dives, and since most cormorants are flighted birds, they need to allow their wings to dry after a dive before taking off again.  Penguins are mostly wing-propelled swimmers and use their feet to steer, cormorants are the opposite, and auks somewhere in between.  The deepest-diving penguin, the emperor penguin, has been recorded foraging at depths of 550 meters (1800 feet); auks can reach 150m and cormorants, 80. The deepest a human scuba diver has gone is a depth of 332.35 meters. It took him only twelve minutes to descend, but *fifteen hours* to resurface, in order to avoid the bends.  This is when nitrogen from the in your lungs dissolves into your blood due to the high pressure, and then boils into gaseous form when the pressure is alleviated, like the fizz when you depressurize a Coke bottle. Resurfacing slowly allows your body to reabsorb the nitrogen before it can boil.  Diving mammals avoid this problem by actually breathing *out* before diving, fueling their underwater motions with the oxygen stored in the blood and muscles.  Diving birds do take a breath before diving, and thus must ascend more slowly than they dive; however, they can resurface a lot faster than humans. How they do this is unknown, but it's postulated that they're able to resorb nitrogen from the blood quicker using their system of air sacs, which dramatically increase the surface area of blood in contact with air.
+**Pursuing.** If a bird wants to go deeper or stay submerged longer, they face some evolutionary trade-offs. Penguins, auks (including puffins), and cormorants have dense bones compared to other birds, and dense, overlapping feathers to keep out the water. Cormorants actually fail at this on deeper dives, and since most cormorants are flighted birds, they need to allow their wings to dry after a dive before taking off again.  Penguins are mostly wing-propelled swimmers and use their feet to steer, cormorants are the opposite, and auks somewhere in between.  The deepest-diving penguin, the emperor penguin, has been recorded foraging at depths of 550 meters (1800 feet); auks can reach 150m and cormorants, 80. The deepest a human scuba diver has gone is a depth of 332.35 meters. It took him only twelve minutes to descend, but *fifteen hours* to resurface, in order to avoid the bends.  This is when nitrogen from the in your lungs dissolves into your blood due to the high pressure, and then boils into gaseous form when the pressure is alleviated, like the fizz when you depressurize a Coke bottle. Resurfacing slowly allows your body to reabsorb the nitrogen before it can boil.  Diving mammals avoid this problem by actually breathing *out* before diving, fueling their underwater motions with the oxygen stored in the blood and muscles.  Diving birds do take a breath before diving, and thus must ascend more slowly than they dive; however, they can resurface a lot faster than humans. How they do this is unknown, but it's postulated that they're able to resorb nitrogen from the blood quicker using their system of air sacs, which dramatically increase the surface area of blood in contact with air.
 
 {% include image-caption.html imageurl="/assets/images/posts/cormorant-swimming.jpg" title="cormorant" caption="Cormorants float low in the water compared to other birds due to their dense bones." %}
 
