--- a/_posts/2022-04-27-news.md
+++ b/_posts/2022-04-27-news.md
@@ -15,7 +15,7 @@ Every so often, a scientific paper comes out that rocks the paleontology communi
 ### Sauropod Sails
 Sauropods (long-necked dinosaurs) came in a variety of shapes and sizes, but dicraeosaurids (meaning "bifurcated reptiles"), from Early Cretaceous South America, are some of the most puzzling. They had rather short necks for sauropods, and are thought to have held them in a more horizontal or downward-facing posture than other sauropods, hypothesized to be efficient grazers rather than high-browsers. And some of them--*Dicraeosaurus*, *Amargasaurus*, and *Bajadasaurus*--had hyper-elongated neural spines (the sticking-out part of the vertebrae). *Dicraeosaurus*'s spines were mostly straight, rather modest, and blunt-ended, but *Amargasaurus* had long, pointy, backward-swept spines while *Bajadasaurus*'s were even longer and forward-raked. What were these extreme structures for?
 
-{% include image-caption.html imageurl="/assets/images/posts/bajada-skeleton.avif#wide" title="Bajadasaurus skeleton" caption="Bajadasaurus, described in 2019, is known from a crushed skull and a few neck vertebrae, and had the most extreme spines we know of among dicraeosaurids."%}
+{% include image-caption.html imageurl="/assets/images/posts/bajada-skeleton.png#wide" title="Bajadasaurus skeleton" caption="Bajadasaurus, described in 2019, is known from a crushed skull and a few neck vertebrae, and had the most extreme spines we know of among dicraeosaurids."%}
 
 A number of hypotheses have been suggested over the years--that they were connected by a flap of skin, kind of like a *Draco* lizard's "wings"; that they supported a fatty hump like a bison, or huge muscles for lifting the neck; or that they were horn cores covered in keratin, like a longhorn cow. That last interpretation has been the frontrunner for the past few years, the idea being that the horns would have deterred predators from attacking while the animal had its head down, grazing.
 
