--- a/_posts/2020-07-09-crocs.markdown
+++ b/_posts/2020-07-09-crocs.markdown
@@ -32,17 +32,17 @@ The first branch to split off within Pseudosuchia is that of the ornithosuchids 
 
 Above: *Dynamosuchus*.  All known ornithosuchids looked basically like this.
 
-### Aetosauria
+### Aëtosauria
 
-The next branch we’ll look at is much more specialized: the heavily-armored aetosaurs (meaning “eagle reptile”).  These filled the same niche in the Triassic as ankylosaurs would later in the Cretaceous: they were large, bulky herbivores with piglike snouts that would’ve been good for digging up roots.
+The next branch we’ll look at is much more specialized: the heavily-armored aëtosaurs (meaning “eagle reptile”).  These filled the same niche in the Triassic as ankylosaurs would later in the Cretaceous: they were large, bulky herbivores with piglike snouts that would’ve been good for digging up roots.
 
 ![desmatosuchus](/assets/images/posts/desmatosuchus.jpg)
 
-Above: *Desmatosuchus*, the largest and spikiest known aetosaur, could reach 4.5 meters long and weigh half a tonne (about buffalo-sized).  Fun fact: the Pokemon Avalugg is based on a combination of *Desmatosuchus* and a tabular iceberg.
+Above: *Desmatosuchus*, the largest and spikiest known aëtosaur, could reach 4.5 meters long and weigh half a tonne (about buffalo-sized).  Fun fact: the Pokemon Avalugg is based on a combination of *Desmatosuchus* and a tabular iceberg.
 
 ![typothorax](/assets/images/posts/typothorax.png)
 
-Above: *Typothorax*, a smaller, pig-sized aeotosaur.
+Above: *Typothorax*, a smaller, pig-sized aëtosaur.
 
 ### Poposauroidea
 
