--- a/_posts/2020-09-09-overly.md
+++ b/_posts/2020-09-09-overly.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Paleontological Publications' Sesquipedalian Excesses Translated Ad Hoc Into Succinct Proxies for the Hoi Polloi: Or, Overly Complicated Language in Plain English"
-tags: [Miscellaneous, Tips]
+tags: [Science, Tips]
 date:   2020-09-09 00:02:08 -0700
 categories: blog post
 featured_image_thumbnail:
