--- a/_posts/2020-11-11-concepts.md
+++ b/_posts/2020-11-11-concepts.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Some Strange Paleo Concepts You Probably Haven't Heard Of"
-tags: [Miscellaneous, Evolution]
+tags: [Science, Evolution]
 date:   2020-11-11 01:40:08 -0700
 categories: blog post
 featured_image_thumbnail:
