--- a/_posts/2020-12-02-chinle.md
+++ b/_posts/2020-12-02-chinle.md
@@ -86,13 +86,13 @@ As in my Yixian Formation post, I'll start with the heavyweights and move down t
 
 ![desmatosuchus](/assets/images/posts/desmatosuchus2.jpg)
 
-Chinle is the best place in the world to study **aetosaurs**, the armored, herbivorous croc relatives that rose and fell during the Triassic Period.  These filled the same niche that ankylosaurs (club-tailed dinosaurs) and glyptodonts (car-sized armadillos) would later: low-slung, tank-like large herbiore.  Aetosaurs often had shovel-like snouts, possibly for digging up tubers, mushrooms, and soft plants, sort of like a boar (but less so, since aetosaurs didn't have the fleshy, muscular, dextrous face that we mammals do).  One of the largest and most famous was *Desmatosuchus* (above), which could reach lengths of 5 meters and could weigh half a tonne.  Its fossils are often found in what looks like family groups, indicating that they were herd animals, also similar to modern boars.  It's also the inspiration for the Pokémon Avalugg!
+Chinle is the best place in the world to study **aëtosaurs**, the armored, herbivorous croc relatives that rose and fell during the Triassic Period.  These filled the same niche that ankylosaurs (club-tailed dinosaurs) and glyptodonts (car-sized armadillos) would later: low-slung, tank-like large herbiore.  Aëtosaurs often had shovel-like snouts, possibly for digging up tubers, mushrooms, and soft plants, sort of like a boar (but less so, since aëtosaurs didn't have the fleshy, muscular, dextrous face that we mammals do).  One of the largest and most famous was *Desmatosuchus* (above), which could reach lengths of 5 meters and could weigh half a tonne.  Its fossils are often found in what looks like family groups, indicating that they were herd animals, also similar to modern boars.  It's also the inspiration for the Pokémon Avalugg!
 
 The other animals in this image are *Trilophosaurus* again (above *Desmatosuchus*), and a few *Revueltosaurus* who we will meet later.
 
 ![typothorax](/assets/images/posts/typothorax.png)
 
-Above: Aetosaurs also came in smaller sizes, like the 2-meter *Typothorax*.
+Above: Aëtosaurs also came in smaller sizes, like the 2-meter *Typothorax*.
 
 ![placerias](/assets/images/posts/placerias.jpg)
 
@@ -112,7 +112,7 @@ Another group of welterweight herbivores, or possibly omnivores, were the **sile
 
 ![revueltosaurus](/assets/images/posts/revuelto.png)
 
-The lightweight herbivores at Chinle included the thin-shelled turtle *Chinlechelys*, the tuatara relative *Whitakersaurus*, and the basal croc relative *Revueltosaurus* (above). *Revueltosaurus* was a small, basal relative of the larger, more heavily armored aetosaurs discussed above.  To me, it looks a lot like the [Crystal Palace *Iguanodon*](https://cpdinosaurs.org/images/uploads/pages/Iguanodon_1.jpeg) in miniature!  For this piece I imagined *Revueltosaurus* as the opossum of Chinle: a medium-sized, bulky, nocturnal generalist, which eats mainly plants but wouldn't pass up an opportunity to scavenge from a carcass or nab an insect.  There's no evidence one way or the other for a nocturnal or diurnal habit; I just picked nocturnal because I haven't done many night pieces.
+The lightweight herbivores at Chinle included the thin-shelled turtle *Chinlechelys*, the tuatara relative *Whitakersaurus*, and the basal croc relative *Revueltosaurus* (above). *Revueltosaurus* was a small, basal relative of the larger, more heavily armored aëtosaurs discussed above.  To me, it looks a lot like the [Crystal Palace *Iguanodon*](https://cpdinosaurs.org/images/uploads/pages/Iguanodon_1.jpeg) in miniature!  For this piece I imagined *Revueltosaurus* as the opossum of Chinle: a medium-sized, bulky, nocturnal generalist, which eats mainly plants but wouldn't pass up an opportunity to scavenge from a carcass or nab an insect.  There's no evidence one way or the other for a nocturnal or diurnal habit; I just picked nocturnal because I haven't done many night pieces.
 
 Tuatara are the only living members of Rhynchocephalia, a group whose lineage split off from that of lizards way back in the Early or Middle Triassic.  Because they're so distantly related to any other living animal, they're commonly called "living fossils" or "basically dinosaurs," but both these terms are super problematic.  Especially the latter: we *have* dinosaurs around today--birds--and tuatara are not even close to dinosaurs on the tree of life.  Check out the Common Descent Podcast's epidosde on ["living fossils"](https://commondescentpodcast.wordpress.com/2020/06/27/episode-90-living-fossils/) to learn more about the history, meaning, and contention around the use of that term.
 
