--- a/_posts/2021-01-27-bayes.md
+++ b/_posts/2021-01-27-bayes.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "How To Use Bayes's Theorem In Real Life"
-tags: [Rationality, Tips]
+tags: [Rationality, Math]
 date:   2021-01-27 00:00:01 -0700
 categories: blog post
 featured_image_thumbnail:
