--- a/_posts/2021-05-05-pokemon.md
+++ b/_posts/2021-05-05-pokemon.md
@@ -20,7 +20,7 @@ I'm going to start with a few Pokémon whose paleontological inspiration is less
 
 {% include image-caption.html imageurl="/assets/images/posts/desmato.png" title="Desmatosuchus" caption="My interpretation of Desmatosuchus dressed up in the colors of the Pokémon Avalugg." %}
 
-*Desmatosuchus* was an impressively tabular aetosaur, one of a subset of the [croc family](https://obscuredinosaurfacts.com/blog/post/2020/07/09/crocs.html) that were heavily armored, low-slung herbivores, similar in niche to the later ankylosaurs and glyptodonts.  They had upturned snouts they may have used to dig for roots, like boars.  Aetosaurs, like many diverse forms of pseudosuchians, rose and fell within the Late Triassic.
+*Desmatosuchus* was an impressively tabular aëtosaur, one of a subset of the [croc family](https://obscuredinosaurfacts.com/blog/post/2020/07/09/crocs.html) that were heavily armored, low-slung herbivores, similar in niche to the later ankylosaurs and glyptodonts.  They had upturned snouts they may have used to dig for roots, like boars.  Aëtosaurs, like many diverse forms of pseudosuchians, rose and fell within the Late Triassic.
 
 #### Dreepy, Drakloak, and Dragapult
 
