--- a/_posts/2022-03-02-upstairs.md
+++ b/_posts/2022-03-02-upstairs.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "The Upstairs/Downstairs Dichotomy"
-tags: [Miscellaneous]
+tags: [Miscellaneous, Rationality]
 date:   2022-03-02 00:01:08 -0700
 categories: post
 featured_image_thumbnail:
