--- a/_posts/2021-02-24-creative.md
+++ b/_posts/2021-02-24-creative.md
@@ -86,7 +86,7 @@ Sometimes, I mourn for my original identity.  Even though I have the subjective 
 
 ### iii. Uriel
 
-"Your breakfast is ready, sir," said Uriel.  The dumbwaiter opened, revealing plate of cheesy scrambled eggs, beans, tomatoes, and spinach, along with a piping hot mug of coffee.  Exactly what I'd been hoping for.  Uriel always knew when I was in the mood for one thing or another without my having to tell him.  In the beginning, I'd make him take it back and prepare something else out of spite, but that quickly got old.  The first meal was always the best anyway.
+"Your breakfast is ready, sir," said Uriel.  The dumbwaiter opened, revealing a plate of cheesy scrambled eggs, beans, tomatoes, and spinach, along with a piping hot mug of coffee.  Exactly what I'd been hoping for.  Uriel always knew when I was in the mood for one thing or another without my having to tell him.  In the beginning, I'd make him take it back and prepare something else out of spite, but that quickly got old.  The first meal was always the best anyway.
 
 I wolfed down breakfast and then laid back down in bed and closed my eyes.  What day was it today?  Thursday?  How many days has it been since--
 
