--- a/_posts/2022-06-22-creative2.md
+++ b/_posts/2022-06-22-creative2.md
@@ -32,9 +32,9 @@ I'd been nodding along, but now I said, trying not to sound apologetic, "I don't
 
 "No problem, sis," she said, putting her phone back in her designer clutch.
 
-"Sorry, I couldn't help but overhear," said a woman's voice from the table next to ours. I turned, and tried not to let judgment show on my face. She was a Goop-looking type, a beachy blonde with a fringed suede crop top, bleach-stained mom jeans, and what looked like two pounds of crystal jewelry dangling all over. "You know incubators cause micro-cracks that affect your baby's health, right? And there's no substitute for egg-to-skin time when it comes to bonding. Mothers have brooded their own eggs for millennia, that's how it's supposed to be done. And did you know that the Unabomber was brooded in an incubator?"
+"Sorry, I couldn't help but overhear," said a woman's voice from the table next to ours. I turned, looked, and tried not to let judgment show on my face. She was a Goop-looking type, a beachy blonde with a fringed suede crop top, bleach-stained mom jeans, and what looked like two pounds of crystal jewelry dangling all over. "You know incubators cause micro-cracks that affect your baby's health, right? And there's no substitute for egg-to-skin time when it comes to bonding. Mothers have brooded their own eggs for millennia, that's how it's supposed to be done. And did you know that the Unabomber was brooded in an incubator?"
 
-Wren and I had stiff smiles on our faces, and we exchanged a glance. "Thanks for the advice," Wren said, "but it's her own choice to make, wouldn't you agree?" She turned back to face me in a conversation-is-over kind of way.
+Wren and I exchanged a glance, stiff smiles on both of our faces. "Thanks for the advice," Wren said, "but it's her own choice to make, wouldn't you agree?" She turned back to face me in a conversation-is-over kind of way.
 
 "Now, I know you can't have an affogato or a digestif right now, but how about some celebratory gelato?"
 
@@ -320,7 +320,7 @@ Mr. Huang nodded, satisfied. Max tugged harder and started emitting high-pitched
 
 I hadn't been this excited in years.
 
-Uriel had me working on an expansion to the spaceship. I'd always had a mild suspicion there was more to the ship than was accessible to me, but after two years of living here in monotony, I'd mostly forgotten about it. Now, suddenly, where there had been a blank white bulkhead, there was a sliding door. Close examination of the area around the door revealed that there was a retractable wall panel that had hidden it previously. I inspected the rest of the ship, looking for similar hidden doors, but found none. Either this expansion was the only one planned, or Uriel had other tricks up his sleeve.
+Uriel had me working on an expansion to the spaceship. I'd always had a mild suspicion there was more to the ship than was accessible to me, but after two years of living here in monotony, I'd mostly forgotten about it. Now, suddenly, where there had been a blank white bulkhead, there was a sliding door. Close examination of the area around the door revealed a retractable wall panel that had hidden it previously. I inspected the rest of the ship, looking for similar hidden doors, but found none. Either this expansion was the only one planned, or Uriel had other tricks up his sleeve.
 
 Behind the sliding door was a blank, sterile space, its floor plan a mirror image to what I'd thought was the entire ship previously. There was an identical chandelier-on-rails in a huge, barren white room, an identical dumbwaiter next to an identical, unslept-in bed, and an identical unused bathroom, closet, and exercise room.
 
@@ -455,6 +455,8 @@ We snapped the wishbone. She got the larger half.
 I didn't ask her to tell me her wish. I had the rest of forever to figure out what it was.
 
 ### viii. Vampires
+
+*Trigger warning: gore*
 
 The human in the elevator was getting nervous.
 
