--- a/_posts/2022-06-22-creative2.md
+++ b/_posts/2022-06-22-creative2.md
@@ -322,7 +322,7 @@ I hadn't been this excited in years.
 
 Uriel had me working on an expansion to the spaceship. I'd always had a mild suspicion there was more to the ship than was accessible to me, but after two years of living here in monotony, I'd mostly forgotten about it. Now, suddenly, where there had been a blank white bulkhead, there was a sliding door. Close examination of the area around the door revealed a retractable wall panel that had hidden it previously. I inspected the rest of the ship, looking for similar hidden doors, but found none. Either this expansion was the only one planned, or Uriel had other tricks up his sleeve.
 
-Behind the sliding door was a blank, sterile space, its floor plan a mirror image to what I'd thought was the entire ship previously. There was an identical chandelier-on-rails in a huge, barren white room, an identical dumbwaiter next to an identical, unslept-in bed, and an identical unused bathroom, closet, and exercise room.
+Behind the sliding door was a blank, sterile space, its floor plan a mirror image to what I'd thought was the entire ship before. There was an identical chandelier-on-rails in a huge, barren white room, an identical dumbwaiter next to an identical, unslept-in bed, and an identical unused bathroom, closet, and exercise room.
 
 "What's all this, Uriel?" I'd asked when I saw the new space for the first time. "Are we expecting a guest?" I didn't want to get my hopes up, but could already barely contain my excitement. How strange; when I lived on Earth I'd never looked forward to having a guest. In fact, I'd usually dreaded it, or made excuses to prevent it. But I guess two years of solitary confinement can change a person.
 
@@ -414,7 +414,7 @@ I walked as evenly as I could out into my own pasture. The chandelier was shinin
 
 Her name was Paola, and I learned her story over the next few weeks.
 
-Two years ago, she had been living almost as solitary a life as I had. She'd been employed, along with her father and two brothers, at a big industrial-organic farm that specialized in baby spinach. Before that, she'd worked other crops, moving with the seasons and the opportunities and the whims of the family.  The spinach was highly labor-intensive--since it was organic, they used human weeders instead of herbicides--and thus low-margin and expensive, and so it was one of the first agricultural victims of layoffs as the apocalypse was ramping up. Paola and her family couldn't find an alternative farm job, since all the workers were in the same boat, with huge numbers of other organic and specialty farmers looking for work while incumbents were expecting to be laid off at any moment as well. Then a plague struck the state she was living in especially hard, causing city folk to flee, fearing infection, and the less scrupulous and more desperate to raid whatever homesteads and barracks happened to be in their path. Vagrants brought the plague to Paola's father and one of her brothers, who insisted that she and her remaining brother flee before they fell sick as well. The two of them eked out a living in an isolated, mountainous area with rocky soil that could only be reached on foot, surviving on goat's milk and potatoes and the occasional hare or fish they could trap. And then, of course, a raider with a gun still managed to find them and fatally wound Paola's brother before she was able to bash his head in with a shovel. She used that same shovel to bury her brother, which took forever because of the rocky soil.
+Two years ago, she had been living almost as solitary a life as I had. She'd been employed, along with her father and two brothers, at a big industrial-organic farm that specialized in baby spinach. Before that, she'd worked other crops, moving with the seasons and the opportunities and the whims of the family.  The spinach was highly labor-intensive--since it was organic, they used human weeders instead of herbicides--and thus low-margin and expensive, and so it was one of the first agricultural victims of layoffs as the apocalypse was ramping up. Paola and her family couldn't find an alternative farm job, since all the workers were in the same boat, with huge numbers of other organic and specialty farmers looking for work while incumbents were expecting to be laid off at any moment as well. Then a plague struck the state she was living in especially hard, causing city folk to flee, fearing infection, and the less scrupulous and more desperate to raid whatever homesteads and barracks happened to be in their path. Vagrants brought the plague to Paola's father and one of her brothers, who insisted that she and her remaining brother flee before they fell sick as well. The two of them eked out a living in an isolated, mountainous area with rocky soil that could only be reached on foot, surviving on goat's milk and potatoes and the occasional hare or fish they could trap. But eventually, a raider with a gun still managed to find them and fatally wound Paola's brother before she was able to bash his head in with a shovel. She used that same shovel to bury her brother, which took forever because of the rocky soil.
 
 After the worst of the plague had run its course, people returned to the cities and rule of law and a semblance of an economy seemed to return, at least based on what Paola could pick up on her hand-cranked radio. And then, of course, she was kidnapped.
 
@@ -599,9 +599,3 @@ I didn't feel as if I could say no, but nodded anyway.
 ---------------------------------
 
 *Note: The page image was generated by the deep learning model DALL-E Mini in response to the prompt "the best art". The other eight images generated were all variants of Starry Night by Van Gogh. I'm not sure what this one is supposed to be or why it was so different than the rest.*
-
-<!--### ix. Hollow Kingdom
-
-### x. Frenzy Virus
-
-### xi. Martians returning to earth-->
